--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.4",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
+    "react-globe.gl": "^2.35.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "three": "^0.177.0"
