--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.35.0",
-    "react-icons": "^5.5.0",
+    "react-icons": "4.12.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "three": "^0.177.0"
