--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.4",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
@@ -30,6 +31,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "firebase-tools": "^14.19.1",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
