--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "firebase-tools": "^14.19.1",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^5.2.0",
+    "vite-plugin-ssr": "^0.4.142",
+    "vite-ssg": "^28.2.2"
   }
 }
