--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^9.1.4",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.12",
+    "picomatch": "^4.0.3",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
